--- a/notebooks/EDA & Modelling.ipynb
+++ b/notebooks/EDA & Modelling.ipynb
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1bafbb48",
+   "id": "8a967821",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "946057d5",
+   "id": "dcd63da7",
    "metadata": {},
    "source": [
     "## Overall Sales Performance"
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0e6c5182",
+   "id": "3ca0d98f",
    "metadata": {
     "scrolled": true
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96bbaa7",
+   "id": "104fa5bb",
    "metadata": {},
    "source": [
     "- Based on the graph above, there is no pattern of data that represents seasonality. But there is a slightly positive trend"
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "905b1c24",
+   "id": "3ce88e38",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0a759906",
+   "id": "1fdc5cb0",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "23c82f83",
+   "id": "59bcce4c",
    "metadata": {},
    "outputs": [
     {
@@ -760,17 +760,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8edb184c",
+   "id": "dcf7a185",
    "metadata": {},
    "source": [
-    "- outlier untuk rata - rata total penjualan tiap harinya cukup kecil sehingga menggambarkan distribusi penjualan untuk tiap harinya cukup seragam\n",
-    "- rata - rata total penjualan paling banyak terdapat pada hari kamis"
+    "- The outliers for the average daily total sales are relatively small, indicating that the sales distribution for each day is quite uniform\n",
+    "- The highest average total sales are found on Thursdays."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e62937de",
+   "id": "e8223475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ced41727",
+   "id": "6002e3b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d640899c",
+   "id": "6f166daf",
    "metadata": {},
    "outputs": [
     {
@@ -818,11 +818,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc7f1e59",
+   "id": "febbaf01",
    "metadata": {},
    "source": [
-    "- outlier untuk rata - rata total penjualan tiap minggunya cukup kecil sehingga menggambarkan distribusi penjualan untuk tiap minggunya seragam\n",
-    "- rata - rata total penjualan paling banyak terdapat pada minggu ke-2"
+    "- The outliers for the average weekly total sales are small enough, indicating that the sales distribution for each week is relatively uniform.\n",
+    "- The highest average total sales are found in the second week."
    ]
   },
   {
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "448be629",
+   "id": "3c887aa0",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5cfe2e83",
+   "id": "ea74d665",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "421548c7",
+   "id": "16304e81",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c9297bd4",
+   "id": "bcf60ec0",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4fe2b7",
+   "id": "db9b1c81",
    "metadata": {},
    "source": [
     "- B1G1 occur after 2023-01"
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "006d7096",
+   "id": "de60ce31",
    "metadata": {
     "scrolled": false
    },
@@ -1047,15 +1047,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332d6402",
+   "id": "c4561d5d",
    "metadata": {},
    "source": [
-    "- Terdapat hubungan yang positif antara qty_total dan FS_total dan B1G1"
+    "- There is a positive correlation between qty_total and FS_total and B1G1, indicating that qty_total is influenced by FS and B1G1."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dcdd8d0b",
+   "id": "92bb69f3",
    "metadata": {},
    "source": [
     "# Modelling for demand forecasting model of specific menu_group"
@@ -1063,15 +1063,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "894cb8d4",
+   "id": "98ef59e0",
    "metadata": {},
    "source": [
-    "## XGBoost"
+    "## XGBoost\n",
+    "\n",
+    "XGBoost is used because its effectiveness in handling time series forecasting problem"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d2cba3bf",
+   "id": "7f27bc5b",
    "metadata": {},
    "source": [
     "### Preprocessing"
@@ -1080,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f2456415",
+   "id": "599b6be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,8 +1106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
-   "id": "c00793a5",
+   "execution_count": 538,
+   "id": "c8f8f759",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 525,
-   "id": "ceb8164f",
+   "id": "0031ad3a",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 527,
-   "id": "c2099033",
+   "id": "a9176b3f",
    "metadata": {},
    "outputs": [
     {
@@ -1259,8 +1261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
-   "id": "a464d5da",
+   "execution_count": 539,
+   "id": "bc9d038f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,7 +1274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44c9f8e3",
+   "id": "d39686e8",
    "metadata": {},
    "source": [
     "### Training"
@@ -1280,8 +1282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
-   "id": "9f4a2717",
+   "execution_count": 540,
+   "id": "316e3e69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,8 +1296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
-   "id": "17829fde",
+   "execution_count": 541,
+   "id": "e2a6c20a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,8 +1327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
-   "id": "91ed6c96",
+   "execution_count": 542,
+   "id": "5d3defe2",
    "metadata": {},
    "outputs": [
     {
@@ -1372,9 +1374,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26284bbc",
+   "id": "ce4d6330",
    "metadata": {},
    "source": [
+    "- the error rate is small so the model good to be deployed\n",
     "- learning rate and max_depth were chosen because these hyperparameters influence a lot to the minimum error than any hyperparameter (e.g: gamma,min_child_weight) based on trial shown below,\n",
     "- Only lr rate, max dept; MAE : 0.11\n",
     "- lr rate, max depth, gamma, min_child_weight; MAE: 0.11\n"
@@ -1383,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 534,
-   "id": "a7b316a4",
+   "id": "08a5c777",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f26df7f",
+   "id": "c003fbd7",
    "metadata": {},
    "source": [
     "### Tuning"
@@ -1431,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": 535,
-   "id": "efebd72d",
+   "id": "c785b86f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": 536,
-   "id": "a29396a4",
+   "id": "0bc87c24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 520,
-   "id": "bc6634d5",
+   "id": "10455a59",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "8152e499",
+   "id": "02742740",
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f64dfe0",
+   "id": "01e631a7",
    "metadata": {},
    "source": [
     "### Save Model to .json"
@@ -1641,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": 537,
-   "id": "76a7c5b4",
+   "id": "ab9b443d",
    "metadata": {},
    "outputs": [
     {
@@ -2067,15 +2070,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5657249",
+   "id": "4f31a1df",
    "metadata": {},
    "source": [
-    "list of model that are succesfully created:\n"
+    "list of model that are succesfully created:\n",
+    "- Chicken Katsu Don\n",
+    "- Gyudon Aburi with Miso Mayo & Sambal Korek\n",
+    "- Sei Sultan sambal rica\n",
+    "- Spaghetti Bolognese Brulee\n",
+    "\n",
+    "the othe menu_group model is failed to be generated because the data too small\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "842e4eef",
+   "id": "a69e8ec0",
    "metadata": {},
    "source": [
     "## LSTM"
@@ -2083,16 +2092,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39cff8ff",
+   "execution_count": 543,
+   "id": "1bcf0557",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def windowed_dataset(series, window_size, batch_size, shuffle_buffer):\n",
+    "    series = tf.expand_dims(series, axis=-1)\n",
+    "    ds = tf.data.Dataset.from_tensor_slices(series)\n",
+    "    ds = ds.window(window_size + 1, shift=1, drop_remainder=True)\n",
+    "    ds = ds.flat_map(lambda w: w.batch(window_size + 1))\n",
+    "    ds = ds.shuffle(shuffle_buffer)\n",
+    "    ds = ds.map(lambda w: (w[:-1], w[1:]))\n",
+    "    return ds.batch(batch_size).prefetch(1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "238a018e",
+   "id": "e8404940",
    "metadata": {},
    "outputs": [],
    "source": []
